2006-02-11  Zoltan Varga  <vargaz@gmail.com>

	* mini-exceptions.c mini-x86.h mini-x86.c: Get rid of 
	MONO_INIT_CONTEXT_FROM_CALLER, and use MONO_INIT_CONTEXT_FROM_FUNC
	instead.

	* generics.2.cs: Revert the nullable reftypes tests.

2006-02-10  Zoltan Varga  <vargaz@gmail.com>

	* mini-exceptions.c (MONO_INIT_CONTEXT_FROM_CALLER): Avoid
	using __builtin_frame_address (1) as it doesn't work in the presence
	of optimizations. Hopefully fixes #77273.

	* Makefile.am generics.cs generics.2.cs: Revert the generics.2.cs
	-> generics.cs change as it doesn't work with some automake versions.

Thu Feb 9 16:24:44 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini.c: handle systems that sue a different way to
	retrieve the stack address of the current thread.

2006-02-09  Zoltan Varga  <vargaz@gmail.com>

	* generics.2.cs: Add tests for nullable reference types.

Wed Feb 8 19:33:17 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini.c: always handle the case when mono_jit_init()
	is called in a thread different from the main thread,
	confusing libgc (bug #77309).

Mon Feb 6 09:01:24 EST 2006 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c: fix handling of exceptions in large methods (bug #74932).

Fri Feb 3 18:51:35 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini.c: change optimize_branches () to use a single loop
	and introduce a new optimization to simplify some range checks.

2006-02-03  Martin Baulig  <martin@ximian.com>

	* debug-debugger.c (debugger_thread_manager_thread_created): Removed
	and merged with debugger_thread_manager_add_thread().
	(mono_debugger_main): Call debugger_thread_manager_add_thread() to
	inform the debugger about the main thread.

2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* basic.cs: Add test for div.un/rem.un constant folding.

2006-02-03  Neale Ferguson <neale@sinenomine.net>

	* cpu-s390x.md: correct int_xor_imm length

2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* generics.2.cs: New test for #77442.
