@@ -398,6 +398,13 @@ get_call_info (MonoMethodSignature *sig, gboolean is_pinvoke)
 			cinfo->ret.storage = ArgInFloatReg;
 			cinfo->ret.reg = 8;
 			break;
+		case MONO_TYPE_GENERICINST:
+			if (mono_type_generic_inst_is_valuetype (sig->ret)) {
+				cinfo->ret.storage = ArgInIReg;
+				cinfo->ret.reg = IA64_R8;
+				break;
+			}
+			/* Fall through */
 		case MONO_TYPE_VALUETYPE:
 		case MONO_TYPE_TYPEDBYREF: {
 			guint32 tmp_gr = 0, tmp_fr = 0, tmp_stacksize = 0;
@@ -478,6 +485,12 @@ get_call_info (MonoMethodSignature *sig, gboolean is_pinvoke)
 		case MONO_TYPE_ARRAY:
 			add_general (&gr, &stack_size, ainfo);
 			break;
+		case MONO_TYPE_GENERICINST:
+			if (!mono_type_generic_inst_is_valuetype (sig->params [i])) {
+				add_general (&gr, &stack_size, ainfo);
+				break;
+			}
+			/* Fall through */
 		case MONO_TYPE_VALUETYPE:
 		case MONO_TYPE_TYPEDBYREF:
 			/* FIXME: */
@@ -595,6 +608,10 @@ is_regsize_var (MonoType *t) {
 	case MONO_TYPE_SZARRAY:
 	case MONO_TYPE_ARRAY:
 		return TRUE;
+	case MONO_TYPE_GENERICINST:
+		if (!mono_type_generic_inst_is_valuetype (t))
+			return TRUE;
+		return FALSE;
 	case MONO_TYPE_VALUETYPE:
 		return FALSE;
 	}
